# videoplayer

./: .env  Makefile  pyproject.toml
app/: main.py  router.py  utils.py
app/database/: __init__.py  db.py  exceptions.py  models.py  schemas.py  settings.py
app/mongo/: __init__.py  models.py
app/storage/: __init__.py  settings.py  storageCRUD.py  storage_utils.py
docker-compose/: app.yml
docs/: moscowcameras.drawio
docs/database_schemas/: moscowcameras.drawio
migrations/: env.py
migrations/versions/: 980e5dfd516f_initial_migration.py  ae150705e8e3_normalna_migratiya.py
